# kuehlmak

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
benches/: bench_text.json  kuehlmak.rs
corpus/: gbooks_eng.json  wiki.json
doc/: bigrams.ods
layouts/: aptmak3.kbl  aptmak4.kbl  arensito.kbl  asdfgh.kbl  asset.kbl  c_dvorak.kbl  canary.kbl  capewell.kbl  carpalx.kbl  colemak.kbl  colemak_dh.kbl  config.toml  dvorak.kbl  effort.toml  engram.kbl  halmak.kbl  isrt.kbl  klausler.kbl  minimak12.kbl  minimak4.kbl  minimak8.kbl  nerps.kbl  norman.kbl  qwerty.kbl  semimak.kbl  semimak_jq.kbl  sturdy.kbl  workman.kbl
scripts/: dl_gbooks.sh  process_gbooks.py  process_wiki.sh
src/: anneal.rs  eval.rs  lib.rs  main.rs  text_stats.rs
