[package]
name = "kuehlmak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bencher = "0.1"
rand = { version = "0.8.4", features = ["small_rng"] }

[[bench]]
name = "kuehlmak"
harness = false
