[package]
name = "kuehlmak"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
bencher = "0.1"
rand = { version = "0.8.4", features = ["small_rng"] }
clap = "~2.34.0"
threadpool = "1.8.1"

[[bench]]
name = "kuehlmak"
harness = false
